# cli

./: .SRCINFO  .gitignore  CHANGELOG  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PKGBUILD  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  test.yml
cli/: main.py  settings.py  utils.py
confy_cli/: main.py
scripts/: generate_pkgbuild.sh
