[project]
name = "cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Henrique Sebastião",email = "contato@henriquesebastiao.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "confy-addons (>=0.1.3,<0.2.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
taskipy = "^1.14.1"
radon = "^6.0.1"
bandit = "^1.8.6"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
"main.py" = ['PLW0603', 'PLR0915', 'PLR0912']

[tool.poetry.scripts]
confy = 'cli.main:app'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff format .; ruff check . --fix'
radon = 'radon cc ./cli -a -na'
bandit = 'bandit -r ./cli'
