[project]
name = "cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Henrique Sebastião", email = "contato@henriquesebastiao.com"},
    {name = "Lucas Sousa", email = "lucasdedeus-15@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "typer (>=0.15.4,<0.16.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "confy-addons (>=1.1.0,<2.0.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
taskipy = "^1.14.1"
radon = "^6.0.1"
bandit = "^1.8.6"
mypy = "^1.18.2"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'D', 'UP', 'PERF']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"main.py" = ['PLW0603', 'PLR0915', 'PLR0912']
"__init__.py" = ['D104']

[tool.poetry.scripts]
confy = 'cli.main:app'

[tool.taskipy.tasks]
lint = 'poetry run ruff check .; poetry run ruff check . --diff'
format = 'poetry run ruff format .; poetry run ruff check . --fix'
mypy = 'poetry run mypy -p cli'
radon = 'poetry run radon cc ./cli -a -na'
bandit = 'poetry run bandit -r ./cli'
